# LearnOpenGL

./: .gitignore  LearnOpenGL.md
Test/: CMakeLists.txt
Test/Assets/Models/BrickWall/: brickwall.mtl
Test/Assets/Models/MarbleBlock/: 大理石块.mtl
Test/Assets/Models/RedBrickWall/: redbrickwall.mtl
Test/Assets/Models/WoodFloor/: woodfloor.mtl
Test/Assets/Models/warman/: nanosuit.mtl
Test/include/Utility/: camera.h  common.h  filesystem.hpp  game.h  model.h  scene.h  shader.hpp  spriteRenderer.h  system.h  utility.h  window.h
Test/include/glad/: glad.h
Test/lib/imgui/: imgui.cpp
Test/src/: glad.c  main.cpp
Test/src/LearnOpenGL/Advanced/: advanced.cpp  blur_fullscreen.frag  cube.frag  cube.vert  depth.frag  edge_fullscreen.frag  explode.geom  gray_color_fullscreen.frag  image.frag  outline.frag  reverse_color_fullscreen.frag  screen.frag  screen.vert  sharpen_fullscreen.frag
Test/src/LearnOpenGL/Advanced/DisplayNormal/: display_normal.frag  display_normal.geom  display_normal.vert
Test/src/LearnOpenGL/Advanced/Glass/: glass.frag  glass.vert
Test/src/LearnOpenGL/Advanced/Skybox/: skybox.frag  skybox.vert
Test/src/LearnOpenGL/AdvancedLighting/: advancedLighting.cpp
Test/src/LearnOpenGL/AdvancedLighting/Shaders/BlinnPhong/: blinn_phong.frag  blinn_phong.vert
Test/src/LearnOpenGL/AdvancedLighting/Shaders/BlinnPhongWithOmniShadowMap/: blinn_phong_with_omni_shadow_map.frag  blinn_phong_with_omni_shadow_map.vert
Test/src/LearnOpenGL/AdvancedLighting/Shaders/DeferredLighting/: deferred_lighting.frag
Test/src/LearnOpenGL/AdvancedLighting/Shaders/GBuffer/: gbuffer.frag  gbuffer.vert
Test/src/LearnOpenGL/AdvancedLighting/Shaders/GaussianBlur/: gaussian_blur.comp  gaussian_blur.frag
Test/src/LearnOpenGL/AdvancedLighting/Shaders/Lit/: lit.frag  lit.vert
Test/src/LearnOpenGL/Basic/Triangle/: basic.frag  basic.vert  triangle.cpp
Test/src/LearnOpenGL/Basic/Window/: window.cpp
Test/src/LearnOpenGL/Light/: cube.frag  cube.vert  light.cpp  light.frag
Test/src/LearnOpenGL/Model/: cube.frag  model.cpp
Test/src/LearnOpenGL/PBR/: pbr.cpp
Test/src/LearnOpenGL/PBR/Shaders/Text/: text.frag
Test/src/LearnOpenGL/Practice/: .$game流程.drawio.bkp  .$game系统设计类图.drawio.bkp  game流程.drawio  game系统设计类图.drawio  practice.cpp
Test/src/LearnOpenGL/Practice/Shaders/: sprite.frag  sprite.vert
Test/src/Utility/: camera.cpp  game.cpp  model.cpp  scene.cpp  spriteRenderer.cpp  stb_implementation.cpp  system.cpp  utility.cpp  window.cpp
(+14 files in other folders)
